fix: changed `@import` to `@use` as the first is deprecated

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,6 +1,7 @@
-@import 'colors'
-@import 'system'
-@import 'workspaces'
+@use 'system';
+@use 'workspaces';
+@use 'title';
+@use 'connection';
 
 $font-families: "";
 
