--- a/styles/connection.scss
+++ b/styles/connection.scss
@@ -1,50 +1,50 @@
 @use 'colors';
 
-$connection-background: colors.$common-background;
+$background: colors.$common-background;
 
-$connection-wifi-foreground:       colors.$base0C;
-$connection-wifi-hover-foreground: colors.$base0E;
+$wifi-foreground:       colors.$base0C;
+$wifi-hover-foreground: colors.$base0E;
 
-$connection-bluetooth-foreground:       colors.$base0C;
-$connection-bluetooth-hover-foreground: colors.$base0E;
+$bluetooth-foreground:       colors.$base0C;
+$bluetooth-hover-foreground: colors.$base0E;
 
-$connection-bluetooth-popup-background: colors.$common-background;
+$bluetooth-popup-background: colors.$common-background;
 
-$connection-bluetooth-popup-header-background: colors.$common-background;
-$connection-bluetooth-popup-header-foreground: colors.$base0C;
+$bluetooth-popup-header-background: colors.$common-background;
+$bluetooth-popup-header-foreground: colors.$base0C;
 
-$connection-bluetooth-popup-switch-active-background: colors.$base0C;
+$bluetooth-popup-switch-active-background: colors.$base0C;
 
-$connection-bluetooth-popup-adapter_missing-foreground: colors.$base0F;
+$bluetooth-popup-adapter_missing-foreground: colors.$base0F;
 
-$connection-bluetooth-popup-device-foreground:           colors.$common-foreground;
-$connection-bluetooth-popup-device-hover-foreground:     colors.$base0E;
-$connection-bluetooth-popup-device-connected-foreground: colors.$base0A;
+$bluetooth-popup-device-foreground:           colors.$common-foreground;
+$bluetooth-popup-device-hover-foreground:     colors.$base0E;
+$bluetooth-popup-device-connected-foreground: colors.$base0A;
 
 connection{
-  background: $connection-background;
+  background: $background;
   border-radius: 10px;
   padding: 4px 12px;
   margin: 0.1em 0.15em;
 
   internet { 
-    color: $connection-wifi-foreground; 
+    color: $wifi-foreground; 
     
-    &:hover { color: $connection-wifi-hover-foreground; }
+    &:hover { color: $wifi-hover-foreground; }
   }
   
   bluetooth {
-    color: $connection-bluetooth-foreground;
+    color: $bluetooth-foreground;
 
     > button {
       padding: 0px;
       background: transparent;
 
-      &:hover { color: $connection-bluetooth-hover-foreground; }
+      &:hover { color: $bluetooth-hover-foreground; }
     }
 
     pop-up {
-      background: $connection-bluetooth-popup-background;
+      background: $bluetooth-popup-background;
       border-radius: 10px;
       border: 1px solid rgba(255, 255, 255, 0.1);
       min-width: 200px;
@@ -54,7 +54,7 @@ connection{
 
         header {
           label { 
-            color: $connection-bluetooth-popup-header-foreground;
+            color: $bluetooth-popup-header-foreground;
             font-weight: bold; 
             font-size: 18px;
           }
@@ -63,7 +63,7 @@ connection{
             font-size: 18px;
             border-radius: 10px;
 
-            &.on { background: $connection-bluetooth-popup-switch-active-background; }
+            &.on { background: $bluetooth-popup-switch-active-background; }
 
             slider {
               min-height: 16px;
@@ -78,15 +78,15 @@ connection{
         devices {
           padding: 4px;
 
-          adapter-missing { color: $connection-bluetooth-popup-adapter_missing-foreground; }
+          adapter-missing { color: $bluetooth-popup-adapter_missing-foreground; }
 
           container {
             device {
-              color: $connection-bluetooth-popup-device-foreground;
+              color: $bluetooth-popup-device-foreground;
 
-              &.connected { color: $connection-bluetooth-popup-device-connected-foreground; }
+              &.connected { color: $bluetooth-popup-device-connected-foreground; }
 
-              &:hover { color: $connection-bluetooth-popup-device-hover-foreground; }
+              &:hover { color: $bluetooth-popup-device-hover-foreground; }
             }
           }
         }
