--- a/styles/system.scss
+++ b/styles/system.scss
@@ -1,13 +1,13 @@
 @use 'colors';
 
-$system-background: colors.$common-background;
+$background: colors.$common-background;
 
-$system-shutdown-foreground: colors.$base0F;
-$system-reboot-foreground:   colors.$base09;
-$system-lock-foreground:     colors.$base0A;
+$shutdown-foreground: colors.$base0F;
+$reboot-foreground:   colors.$base09;
+$lock-foreground:     colors.$base0A;
 
 system {
-  background: $system-background;
+  background: $background;
   border-radius: 10px;
 
   button {
@@ -17,11 +17,11 @@ system {
     background: transparent;
   }
 
-  .shutdown { color: $system-shutdown-foreground; }
+  .shutdown { color: $shutdown-foreground; }
 
-  .reboot { color: $system-reboot-foreground; }
+  .reboot { color: $reboot-foreground; }
 
-  .lock { color: $system-lock-foreground; margin-right: 4px; }
+  .lock { color: $lock-foreground; margin-right: 4px; }
 
   &:first-child { padding-left: 4px; }
 
