--- a/styles/connection.scss
+++ b/styles/connection.scss
@@ -2,10 +2,21 @@
 
 $background: colors.$common-background;
 
-$wifi-foreground:       colors.$base0C;
-$wifi-hover-foreground: colors.$base0E;
+$internet-foreground: colors.$base0C;
+$internet-hover-foreground: colors.$base0E;
 
-$bluetooth-foreground:       colors.$base0C;
+$internet-popup-background: colors.$common-background;
+
+$internet-popup-header-foreground: colors.$base0C;
+$internet-popup-wired-device-foreground: colors.$common-foreground;
+
+$internet-popup-switch-active-background: colors.$base0C;
+
+$internet-popup-device-foreground: colors.$common-foreground;
+$internet-popup-device-hover-foreground: colors.$base0E;
+$internet-popup-device-connected-foreground: colors.$base0A;
+
+$bluetooth-foreground: colors.$base0C;
 $bluetooth-hover-foreground: colors.$base0E;
 
 $bluetooth-popup-background: colors.$common-background;
@@ -17,30 +28,102 @@ $bluetooth-popup-switch-active-background: colors.$base0C;
 
 $bluetooth-popup-adapter_missing-foreground: colors.$base0F;
 
-$bluetooth-popup-device-foreground:           colors.$common-foreground;
-$bluetooth-popup-device-hover-foreground:     colors.$base0E;
+$bluetooth-popup-device-foreground: colors.$common-foreground;
+$bluetooth-popup-device-hover-foreground: colors.$base0E;
 $bluetooth-popup-device-connected-foreground: colors.$base0A;
 
-connection{
+connection {
   background: $background;
   border-radius: 10px;
   padding: 4px 12px;
   margin: 0.1em 0.15em;
 
-  internet { 
-    color: $wifi-foreground; 
-    
-    &:hover { color: $wifi-hover-foreground; }
-  }
-  
-  bluetooth {
-    color: $bluetooth-foreground;
+  internet {
+    color: $internet-foreground;
 
-    > button {
+    >button {
       padding: 0px;
       background: transparent;
 
-      &:hover { color: $bluetooth-hover-foreground; }
+      &:hover {
+        color: $internet-hover-foreground;
+      }
+    }
+
+    pop-up {
+      all: unset;
+      background: $internet-popup-background;
+      border-radius: 10px;
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      min-width: 100px;
+
+      container {
+        padding: 8px;
+
+        header {
+          label {
+            color: $internet-popup-header-foreground;
+            font-weight: bold;
+            font-size: 18px;
+          }
+
+          switch {
+            font-size: 18px;
+            border-radius: 10px;
+
+            &.on {
+              background: $internet-popup-switch-active-background;
+            }
+
+            slider {
+              min-height: 16px;
+              min-width: 16px;
+              border: 0em solid transparent;
+              border-radius: 10px;
+              margin: 1px;
+            }
+          }
+        }
+
+        wired-device {
+          padding: 4px;
+
+          label {
+            color: $internet-popup-wired-device-foreground;
+          }
+        }
+
+        wifi-devices {
+          padding: 4px;
+
+          container {
+            device {
+              color: $internet-popup-device-foreground;
+
+              &.connected {
+                color: $internet-popup-device-connected-foreground;
+              }
+
+              &:hover {
+                color: $internet-popup-device-hover-foreground;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  bluetooth {
+    color: $bluetooth-foreground;
+
+    >button {
+      padding: 0px;
+      background: transparent;
+
+      &:hover {
+        color: $bluetooth-hover-foreground;
+      }
     }
 
     pop-up {
@@ -53,9 +136,9 @@ connection{
         padding: 8px;
 
         header {
-          label { 
+          label {
             color: $bluetooth-popup-header-foreground;
-            font-weight: bold; 
+            font-weight: bold;
             font-size: 18px;
           }
 
@@ -63,7 +146,9 @@ connection{
             font-size: 18px;
             border-radius: 10px;
 
-            &.on { background: $bluetooth-popup-switch-active-background; }
+            &.on {
+              background: $bluetooth-popup-switch-active-background;
+            }
 
             slider {
               min-height: 16px;
@@ -78,15 +163,21 @@ connection{
         devices {
           padding: 4px;
 
-          adapter-missing { color: $bluetooth-popup-adapter_missing-foreground; }
+          adapter-missing {
+            color: $bluetooth-popup-adapter_missing-foreground;
+          }
 
           container {
             device {
               color: $bluetooth-popup-device-foreground;
 
-              &.connected { color: $bluetooth-popup-device-connected-foreground; }
+              &.connected {
+                color: $bluetooth-popup-device-connected-foreground;
+              }
 
-              &:hover { color: $bluetooth-popup-device-hover-foreground; }
+              &:hover {
+                color: $bluetooth-popup-device-hover-foreground;
+              }
             }
           }
         }
