--- a/styles/status.scss
+++ b/styles/status.scss
@@ -7,12 +7,14 @@ $audio-input-hover-foreground: colors.$base09;
 
 $audio-input-popup-background: colors.$common-background;
 $audio-input-popup-slider-background: colors.$base0A;
+$audio-input-popup-default-foreground: colors.$base09;
 
 $audio-output-foreground: colors.$base0A;
 $audio-output-hover-foreground: colors.$base09;
 
 $audio-output-popup-background: colors.$common-background;
 $audio-output-popup-slider-background: colors.$base0A;
+$audio-output-popup-default-foreground: colors.$base09;
 
 $battery-foreground: colors.$base0A;
 $battery-charging-foreground: colors.$base09;
@@ -52,6 +54,10 @@ status {
           padding-left: 8px;
           min-width: 250px;
 
+          &.default {
+            color: $audio-input-popup-default-foreground;
+          }
+
           >button {
             padding: 0px;
             background: none;
@@ -61,6 +67,10 @@ status {
             highlight {
               background: $audio-input-popup-slider-background;
               min-height: 10px;
+            }
+
+            &.default highlight {
+              background: $audio-input-popup-default-foreground;
             }
 
             slider {
@@ -99,6 +109,10 @@ status {
           padding-left: 8px;
           min-width: 250px;
 
+          &.default {
+            color: $audio-output-popup-default-foreground;
+          }
+
           >button {
             padding: 0px;
             background: none;
@@ -108,6 +122,10 @@ status {
             highlight {
               background: $audio-output-popup-slider-background;
               min-height: 10px;
+            }
+
+            &.default highlight {
+              background: $audio-output-popup-default-foreground;
             }
 
             slider {
