--- a/styles/system.scss
+++ b/styles/system.scss
@@ -3,8 +3,8 @@
 $background: colors.$common-background;
 
 $shutdown-foreground: colors.$base0F;
-$reboot-foreground:   colors.$base09;
-$lock-foreground:     colors.$base0A;
+$reboot-foreground: colors.$base09;
+$lock-foreground: colors.$base0A;
 
 system {
   background: $background;
@@ -17,13 +17,24 @@ system {
     background: transparent;
   }
 
-  .shutdown { color: $shutdown-foreground; }
+  .shutdown {
+    color: $shutdown-foreground;
+  }
 
-  .reboot { color: $reboot-foreground; }
+  .reboot {
+    color: $reboot-foreground;
+  }
 
-  .lock { color: $lock-foreground; margin-right: 8px; }
+  .lock {
+    color: $lock-foreground;
+    margin-right: 8px;
+  }
 
-  &:first-child { padding-left: 4px; }
+  &:first-child {
+    padding-left: 4px;
+  }
 
-  &:last-child { padding-right: 4px; }
+  &:last-child {
+    padding-right: 4px;
+  }
 }
