--- a/styles/connection.scss
+++ b/styles/connection.scss
@@ -8,13 +8,15 @@ $internet-hover-foreground: colors.$base0E;
 $internet-popup-background: colors.$common-background;
 
 $internet-popup-header-foreground: colors.$base0C;
-$internet-popup-wired-device-foreground: colors.$common-foreground;
 
 $internet-popup-switch-active-background: colors.$base0C;
 
-$internet-popup-device-foreground: colors.$common-foreground;
-$internet-popup-device-hover-foreground: colors.$base0E;
-$internet-popup-device-connected-foreground: colors.$base0A;
+$internet-popup-device-wired-foreground: colors.$common-foreground;
+$internet-popup-device-wired-hover-foreground: colors.$base0E;
+
+$internet-popup-device-wifi-foreground: colors.$common-foreground;
+$internet-popup-device-wifi-hover-foreground: colors.$base0E;
+$internet-popup-device-wifi-connected-foreground: colors.$base0A;
 
 $bluetooth-foreground: colors.$base0C;
 $bluetooth-hover-foreground: colors.$base0E;
@@ -87,9 +89,10 @@ connection {
 
         wired-device {
           padding: 4px;
+          color: $internet-popup-device-wired-foreground;
 
-          label {
-            color: $internet-popup-wired-device-foreground;
+          &:hover {
+            color: $internet-popup-device-wired-hover-foreground;
           }
         }
 
@@ -98,14 +101,14 @@ connection {
 
           container {
             device {
-              color: $internet-popup-device-foreground;
+              color: $internet-popup-device-wifi-foreground;
 
               &.connected {
-                color: $internet-popup-device-connected-foreground;
+                color: $internet-popup-device-wifi-connected-foreground;
               }
 
               &:hover {
-                color: $internet-popup-device-hover-foreground;
+                color: $internet-popup-device-wifi-hover-foreground;
               }
             }
           }
