--- a/styles/style.scss
+++ b/styles/style.scss
@@ -8,6 +8,15 @@
 
 $font-families: "";
 
+button {
+  background-image: none;
+  background-color: transparent;
+  box-shadow: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+
 window.Bar {
   font-family: $font-families, JetBrainsMono Nerd Font;
   font-size: 14px;
