--- a/styles/style.scss
+++ b/styles/style.scss
@@ -17,6 +17,11 @@ button {
   margin: 0;
 }
 
+pop-up {
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+
 window.Bar {
   font-family: $font-families, JetBrainsMono Nerd Font;
   font-size: 14px;
