--- a/styles/apps.scss
+++ b/styles/apps.scss
@@ -3,19 +3,14 @@
 $background: colors.$common-background;
 $foreground: colors.$common-foreground;
 
-$notifications-hover-background: rgba(255, 255, 255, 0.1);
+$notifications-background: $background;
 
-$notifications-popup-background: colors.$common-background;
-$notifications-popup-outline: rgba(255, 255, 255, 0.1);
+$notifications-group-background: colors.$base00;
 
-$notifications-popup-app-background: rgba(colors.$base0E, 0.05);
-$notifications-popup-app-foreground: colors.$base0C;
-$notifications-popup-app-hover-foreground: rgba(255, 255, 255, 0.1);
-$notifications-popup-app-outline: colors.$base0E;
-
-$notifications-popup-summary-foreground: colors.$base0F;
-
-$notifications-popup-body-hover-background: rgba(255, 255, 255, 0.1);
+$notifications-group-app-foreground: colors.$base08;
+$notifications-group-summary-foreground: colors.$base0C;
+$notifications-group-delete-foreground: colors.$base08;
+$notifications-group-expand-foreground: colors.$base08;
 
 apps {
   background: $background;
@@ -27,65 +22,58 @@ apps {
     padding: 4px;
   }
 
-  notifications {
-    >button {
-      padding: 4px;
+  pop-up {
+    background: $notifications-background;
 
-      &:hover {
-        background: $notifications-hover-background;
-      }
-    }
-
-    pop-up {
+    notifications-container {
+      background: transparent;
       padding: 8px;
-      background: $notifications-popup-background;
-      border: 1px solid $notifications-popup-outline;
 
-      app-group {
-        background: $notifications-popup-app-background;
-        border: 1px solid $notifications-popup-app-outline;
+      notification-group {
+        background: $notifications-group-background;
         border-radius: 10px;
-        padding: 8px;
-        margin-bottom: 4px;
+        padding: 10px;
 
-        app-name,
-        dismiss-btn {
-          color: $notifications-popup-app-foreground;
-          font-weight: bold;
-          font-size: 18px;
+        app-name {
+          font-size: 0.8em;
+          color: $notifications-group-app-foreground;
         }
 
-        dismiss-btn {
-          padding: 4px;
-          border-radius: 10px;
+        summary {
+          font-size: 1em;
+          font-weight: bold;
+          color: $notifications-group-summary-foreground;
+        }
+
+        delete-button {
+          color: $notifications-group-delete-foreground;
+        }
+
+        bodies-button {
+          margin: 0 1rem;
+          border-radius: 6px;
 
           &:hover {
-            background: $notifications-popup-app-hover-foreground;
+            background: rgba(255, 255, 255, 0.05);
           }
         }
 
-        summary-group {
-          padding: 0px 8px;
-
-          summary,
-          dismiss-btn {
-            color: $notifications-popup-summary-foreground;
-            font-weight: bold;
-          }
-
-          bodies-container {
-            padding: 0px 8px;
-            border-radius: 10px;
-
-            &:hover {
-              background: $notifications-popup-body-hover-background;
-            }
+        bodies {
+          image {
+            margin-right: 6px;
           }
 
           body {
-            padding: 0px;
-            background: transparent;
+            font-size: 1em;
           }
+        }
+
+        expand-button {
+          background: transparent;
+          border: none;
+          box-shadow: none;
+          color: $notifications-group-expand-foreground;
+          padding: 2px 8px;
         }
       }
     }
